# ioda-converters

./: CMakeLists.txt  README.md  buildspec_clang.yml  buildspec_gnu.yml  buildspec_intel.yml  iodaconv-import.cmake.in
cmake/: compiler_flags_GNU_Fortran.cmake
src/: CMakeLists.txt
src/ODB2/Definitions/: era5_amsua_Definition.yaml  era5_amsua_allsky_Definition.yaml
src/bufr2ioda/: bufr2ioda.f90  bufrio_bufr2ioda.f90  init_bufr2ioda.f90  makefile
src/gnssro/: CMakeLists.txt
src/goes16/: CMakeLists.txt  goes16_to_ioda.py.in
src/gsi-ncdiag/: gsi_ncdiag.py
src/gsi-ncdiag_aod/: aod_dicts.py  rename_aod.py  subset_aod.py
src/marine/: gds2_sst2ioda.py.in
src/ncep/: bufr2ncObsTypes.py  mybufr2nc.py  ncep_classes.py
src/ncep/SST-NetCDF/: IODA_SST_prep.sh  make_theia.sh  read_nc_combine_sst_IODA.f
test/: CMakeLists.txt
test/testinput/: goes16_chan10_mesoscale_sample.nc
test/testoutput/: goes16_chan10_mesoscale_sample.nc4
tools/: ioda_to_panoply.py  plot_ioda_image.py
